[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "jwodder-thoth-utils"
dynamic = ["version"]
#description = ???
#readme = "README.rst"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "John Thorvald Wodder II", email = "jwodder-thoth-utils@varonathe.org" }
]

keywords = [
    ###
]

classifiers = [
    "Private :: Keep Off PyPI",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    ###
    "Typing :: Typed",
]

dependencies = [
    "click ~= 8.0",
    "click-loglevel ~= 0.7",
    "eletter ~= 0.5",
    "outgoing ~= 0.6",
    "outgoing-mailgun ~= 0.3",
    "pydantic ~= 2.0",
    "requests ~= 2.20",
]

[project.scripts]
dailyreport = "thoth_utils.dailyreport:main"
update-dns = "thoth_utils.update_dns:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/thoth-utils"
"Bug Tracker" = "https://github.com/jwodder/thoth-utils/issues"

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.build.targets.wheel]
# Needed because the project name differs from the package name:
packages = ["src/thoth_utils"]

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true
